k8s-do/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledgebase
  labels:
    app.kubernetes.io/name: knowledgebase
    app.kubernetes.io/part-of: knowledgebase
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: knowledgebase
  ports:
    - name: http
      port: 80
      targetPort: http
